--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --primary: #30485e;
+  --sidebar-size: 65px;
 }
 
 @media (prefers-color-scheme: dark) {
