style contact-form, adds map placeholder, improve responsivness

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,11 +18,20 @@
 }
 
 body {
-  color: var(--foreground);
+  color: var(--primary);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
+h1,
+h2 {
   font-family: Larken, Impact, sans-serif;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+h2 {
+  font-size: 30px;
 }
